--- a/src/styles/TaskList.module.css
+++ b/src/styles/TaskList.module.css
@@ -33,6 +33,26 @@
   padding: 0.125rem 0.5rem;
 }
 
+.listWithoutItem {
+  border-top: 1px solid var(--gray-400);
+  border-radius: 3px;
+  padding: 4rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.listWithoutItem svg {
+  color: var(--gray-400);
+  margin-block: 0 1rem;
+}
+
+.listWithoutItem :is(strong, p) {
+  color: var(--gray-300);
+  line-height: 140%;
+}
+
 .list {
   display: flex;
   flex-direction: column;
